--- a/package.json
+++ b/package.json
@@ -7,10 +7,17 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "Gabriel Marioto",
   "license": "ISC",
   "devDependencies": {
     "@types/node": "^16.11.0",
+    "@typescript-eslint/eslint-plugin": "^2.34.0",
+    "eslint": "^6.8.0",
+    "eslint-config-standard-with-typescript": "^21.0.1",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-node": "^9.2.0",
+    "eslint-plugin-promise": "^4.3.1",
+    "eslint-plugin-standard": "^4.1.0",
     "git-commit-msg-linter": "^3.2.8",
     "typescript": "^4.4.4"
   }
