--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
   "devDependencies": {
     "@types/node": "^16.11.0",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
-    "eslint": "^6.8.0",
+    "eslint": "^8.0.1",
     "eslint-config-standard-with-typescript": "^21.0.1",
     "eslint-plugin-import": "^2.25.2",
     "eslint-plugin-node": "^9.2.0",
     "eslint-plugin-promise": "^4.3.1",
     "eslint-plugin-standard": "^4.1.0",
     "git-commit-msg-linter": "^3.2.8",
+    "husky": "^7.0.2",
+    "lint-staged": "^11.2.3",
     "typescript": "^4.4.4"
   }
 }
