--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "Gabriel Marioto",
   "license": "ISC",
   "devDependencies": {
+    "@types/jest": "^27.0.2",
     "@types/node": "^16.11.0",
     "@typescript-eslint/eslint-plugin": "^2.34.0",
     "eslint": "^8.0.1",
@@ -20,7 +21,10 @@
     "eslint-plugin-standard": "^4.1.0",
     "git-commit-msg-linter": "^3.2.8",
     "husky": "^7.0.2",
+    "jest": "^27.2.5",
     "lint-staged": "^11.2.3",
+    "ts-jest": "^27.0.7",
+    "ts-node": "^10.3.0",
     "typescript": "^4.4.4"
   }
 }
