--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,4 +1,9 @@
 {
+  "env": {
+    "es2021": true,
+    "node": true,
+    "jest": true
+  },
   "extends": "standard-with-typescript",
   "parserOptions": {
     "project": "./tsconfig.json"
