--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "jest",
-    "test:staged": "jest"
+    "test": "jest --pasWithNoTests",
+    "test:staged": "jest --pasWithNoTests"
   },
   "keywords": [],
   "author": "Gabriel Marioto",
